<resources>
    <string name="app_name">House Chat</string>
    <string name="welcome">Create New Account</string>
    <string name="config">Access to your Account</string>

    <string name="id">ID</string>
    <string name="MP">PASSWORD</string>
    <string name="Login">Login</string>
    <string name="Create">Create Account</string>
    <string name="MyChat">My Chat</string>
    <string name="Chats">Chats</string>
    <string name="Servers">Servers</string>
    <string name="Calls">Calls</string>
    <string name="enter_your_password">Password</string>
    <string name="enter_your_id">User Id</string>
    <string name="Change">Change Password</string>
    <string name="old">Old Password</string>
    <string name="newP">New Password</string>
    <string name="About">This House Chat was developped by M-A-M</string>
    <string name="profil">Profil Account</string>
    <array name="type">
        <item>identifaction</item>
        <item>un</item>
        <item>deux</item>
        <item>trois</item>
        <item>quatre</item>
    </array>
</resources>