<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="0dp"
        android:background="@color/gray">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/myapptext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MyChat"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="25sp">
            </TextView>
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="0dp"
        android:backgroundTint="@color/gray"
        app:tabIndicatorColor="@color/red"
        app:tabIndicatorHeight="3dp"
        app:tabSelectedTextColor="@color/red"
        app:tabTextColor="@color/black">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Chats">

        </com.google.android.material.tabs.TabItem>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/servers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Servers">

        </com.google.android.material.tabs.TabItem>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/calls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Calls">

        </com.google.android.material.tabs.TabItem>

    </com.google.android.material.tabs.TabLayout>

    <!--we use view pager to scroll between tabitem-->
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tabLayout"
        android:layout_marginTop="0dp"

        tools:ignore="SpeakableTextPresentCheck">

    </androidx.viewpager.widget.ViewPager>



</RelativeLayout>