<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordActivity">

    <include layout="@layout/normaltoolbar"></include>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/oldPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:text="@string/Change"
        android:textColor="@color/gray"
        android:textSize="40sp"
        android:textStyle="bold"


        >

    </TextView>


    <TextView
        android:id="@+id/textP1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/oldPassword"
        android:layout_alignBottom="@id/oldPassword"
        android:layout_marginStart="40dp"
        android:gravity="center"
        android:text="@string/old"
        android:textColor="@color/gray"
        android:textSize="20sp"
        android:textStyle="bold">

    </TextView>

    <EditText
        android:id="@+id/oldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/newPassword"
        android:layout_alignEnd="@+id/newPassword"
        android:layout_centerInParent="true"
        android:layout_marginEnd="1dp"
        android:layout_toEndOf="@id/textP1"
        android:background="@drawable/designinput"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawableRight="@drawable/ic_baseline_visibility_off_24"
        android:ems="10"
        android:hint="Password"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white">

    </EditText>

    <TextView
        android:id="@+id/textP2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/newPassword"
        android:layout_alignBottom="@+id/newPassword"
        android:layout_marginStart="40dp"
        android:gravity="center"
        android:text="@string/newP"
        android:textColor="@color/gray"
        android:textSize="20sp"
        android:textStyle="bold">

    </TextView>

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/oldPassword"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_toEndOf="@+id/textP2"
        android:background="@drawable/designinput"
        android:drawableRight="@drawable/ic_baseline_visibility_off_24"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:longClickable="false"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white">

    </EditText>

    <android.widget.Button
        android:id="@+id/btnChange"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/newPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="@drawable/designbutton"
        android:text="@string/Change"
        android:textColor="@color/white"
        android:textStyle="bold">

    </android.widget.Button>


</RelativeLayout>